[gd_scene load_steps=3 format=3 uid="uid://deuhq8h4ymo7y"]

[ext_resource type="Script" uid="uid://cbujfviaqjaxb" path="res://generator_demo.gd" id="1"]

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_8tsrq"]

[node name="Generator" type="Node"]
script = ExtResource("1")

[node name="Player" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamGenerator_8tsrq")
volume_db = -12.041
autoplay = true

[node name="CenterContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -118.0
offset_right = 200.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="FrequencyTitle" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.466667, 0.882353, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Generated Audio Frequency"

[node name="Frequency" type="HBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="FrequencyLabel" type="Label" parent="CenterContainer/Frequency"]
unique_name_in_owner = true
layout_mode = 2
text = "440 Hz"

[node name="FrequencyHSlider" type="HSlider" parent="CenterContainer/Frequency"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 100.0
max_value = 1000.0
value = 440.0

[node name="HSeparator" type="HSeparator" parent="CenterContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VolumeTitle" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.466667, 0.882353, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Playback Volume"

[node name="Volume" type="HBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="VolumeLabel" type="Label" parent="CenterContainer/Volume"]
unique_name_in_owner = true
layout_mode = 2
text = "-12.04 dB"

[node name="VolumeHSlider" type="HSlider" parent="CenterContainer/Volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.25

[connection signal="value_changed" from="CenterContainer/Frequency/FrequencyHSlider" to="." method="_on_frequency_h_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/Volume/VolumeHSlider" to="." method="_on_volume_h_slider_value_changed"]
